
	Update asdf to version 3.1.7
	* modules/asdf/asdf.lisp: Update to asdf 3.1.7
	* modules/asdf/asdf.xml: Update asdf module description

2016-05-01  Daniel Jour  <daniel.oertwig@gmail.com>

	* lispbibl.d (VALUE1_EXTRA) [!value1_register]: do not define
	This fixes patch#93dee6a014b2 (2008-01-13) as discussed in
	https://sourceforge.net/p/clisp/mailman/message/35061096/

2015-03-04  Ken Brown  <kbrown@cornell.edu>

	The Cygwin heap is now in high memory, so STANDARD_HEAPCODES
	no longer work (patch#38).
	* src/lispbibl.d (LINUX_NOEXEC_HEAPCODES) [UNIX_CYGWIN32]: Define

2015-03-04  Ken Brown  <kbrown@cornell.edu>

	"Handle" is used in a w32 prototype, interfering with our
	definition of it as a macro (patch#36).
	* src/unix.d [UNIX_CYGWIN32]: Work around namespace pollution in
	w32 headers

2014-10-22  Sam Steingold  <sds@gnu.org>

	Fix bug#668 posix:file-state always return NIL for :rdev
	* modules/syscalls/configure.in: check for struct stat members

2014-05-11  Sam Steingold  <sds@gnu.org>

	* m4/termcap.m4 (CL_TERMCAP): also look for tgetent in tinfo;
	fixes bug#665 as suggested by Jason Miller <jasontkd@users.sf.net>

2013-04-14  Sam Steingold  <sds@gnu.org>

	* modules/asdf/asdf.lisp: upgrade to 2.33

2013-01-06  Sam Steingold  <sds@gnu.org>

	Avoid startup errors when the user has weird ~/.clisp
	* pathname.d, subr.d (PROBE-PATHNAME): accept &key (:error t)
	* spvw.d (main_actions): pass :ERROR NIL to PROBE-PATHNAME

2013-02-08  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/demos/clx-demos.lisp: require CLX

2013-02-05  Sam Steingold  <sds@gnu.org>

	* modules/bindings/glibc/linux.lisp (__swblk_t): remove the unused
	`def-c-type' (removed from glibc too); fixes bug#656;
	see also http://article.gmane.org/gmane.comp.lib.glibc.alpha/25618

2013-01-06  Bruno Haible  <bruno@clisp.org>

	* pathname.d (unix_user_pwd): Don't use getlogin().
	Reported by Alberto Riva <alb@chip.org> in
	<http://article.gmane.org/gmane.lisp.clisp.general:13995>
