@@ -50,6 +50,10 @@
 	This fixes patch#93dee6a014b2 (2008-01-13) as discussed in
 	https://sourceforge.net/p/clisp/mailman/message/35061096/
 
+2015-03-05  Ken Brown  <kbrown@cornell.edu>
+
+	* src/m4/signal.m4: Remove obsolete Cygwin-specific code
+
 2015-03-04  Ken Brown  <kbrown@cornell.edu>
 
 	The Cygwin heap is now in high memory, so STANDARD_HEAPCODES
